cloud-files/deployment.yaml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: simple-api-service-external
  spec:
    selector:
      app: simple-api
      tier: backend
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
    type: LoadBalancer
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: simple-api
  spec:
    selector:
      matchLabels:
        app: simple-api
        tier: backend
    template:
      metadata:
        labels:
          app: simple-api
          tier: backend
      spec:
        containers:
        - name: simple-api
          image: gcr.io/pocs-254302/github.com/eriasu/simple-api
          imagePullPolicy: Always
