cloud-files/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-simple-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - api.eriasu.dev
    secretName: tls-secret
  rules:
  - host: api.eriasu.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: simple-api-service-internal
          servicePort: 80
